# osculari

./: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  readthedocs.yml  requirements.txt
.github/workflows/: python-package.yml
docs/: requirements.txt
docs/source/: conf.py  example.rst  examples.rst  index.rst  installation.rst  osculari.datasets.rst  osculari.models.rst  osculari.paradigms.rst  usage.rst
docs/source/notebooks/: activation_maps.ipynb  odd_one_out.ipynb  quick_start.ipynb  usage.ipynb
osculari/: __init__.py
osculari/datasets/: __init__.py  dataset_utils.py  geometrical_shapes.py  gratings.py  imutils.py
osculari/models/: __init__.py  model_utils.py  pretrained_layers.py  pretrained_models.py  readout.py  taskonomy_network.py
osculari/paradigms/: __init__.py  adaptive_psychophysics.py  forced_choice.py  paradigm_utils.py
src/osculari/: __init__.py
src/osculari/datasets/: __init__.py  dataset_utils.py  geometrical_shapes.py  gratings.py
src/osculari/models/: __init__.py  model_utils.py  pretrained_features.py  pretrained_layers.py  pretrained_models.py  readout.py
src/osculari/paradigms/: adaptive_psychophysics.py  paradigm_utils.py
tests/datasets/: dataset_utils_test.py  geometrical_shapes_test.py  gratings_test.py  imutils_test.py
tests/models/: model_utils_test.py  pretrained_layers_test.py  pretrained_models_test.py  readout_test.py
tests/paradigms/: adaptive_psychophysics_test.py  forced_choice_test.py  paradigm_utils_test.py
