[project]
name = "osculari"
version = "0.0.4"
description = "Open source library to explore artificial neural networks with psychophysical experiments."
keywords = [
    "deep-neural-networks",
    "psychophysics",
    "cognitive-neuroscience",
    "linear-probing",
    "explainable-ai",
    "interpreting-models"
]
license = {text = "MIT License"}
authors = [
    {name="Arash Akbarinia", email="akbarinia.arash@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: GPU",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries",
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/ArashAkbarinia/osculari"
"Download" = "https://github.com/ArashAkbarinia/osculari/releases"
"Bug Tracker" = "https://github.com/ArashAkbarinia/osculari/issues"
"Documentation" = "https://osculari.readthedocs.io/en/latest"
"Source Code" = "https://github.com/ArashAkbarinia/osculari"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
  zip-safe = true
  license-files = ["LICENSE"]
  include-package-data = false

  [tool.setuptools.dynamic]
    dependencies = {file = ["requirements.txt"]}
    version = {attr = "osculari.__version__"}
    readme = {file = ["README.md"], content-type = "text/markdown"}

  [tool.setuptools.dynamic.optional-dependencies]
    dev = {file = "requirements-dev.txt"}

  [tool.pytest.ini_options]
    addopts = [
        "--import-mode=importlib",
        "--color=yes"
    ]
    testpaths = ["tests"]
